base-installer (1.50) UNRELEASED; urgency=low

  * Add PPC970MP (actually PPC970*) and POWER5 to the list of powerpc64
    systems (closes: #339283, http://launchpad.net/bugs/35116).
  * Don't consider powerpc64 kernels usable on powerpc.

 -- Colin Watson <cjwatson@debian.org>  Thu, 16 Mar 2006 09:38:49 +0000

base-installer (1.49) unstable; urgency=HIGH

  * Move 00IgnoreTimeConflict creation so it happens for any type of apt
    source, this is needed so the apt-get update in base-installer's postinst
    works. Other settings of --ignore-time-conflict should be removed from
    the rest of d-i eventually.

 -- Joey Hess <joeyh@debian.org>  Mon,  6 Mar 2006 15:58:44 -0500

base-installer (1.48) unstable; urgency=low

  [ Christian Perrier ]
  * Add some comments for translators in templates.

  [ Frans Pop ]
  * Redirect stderr from apt-cache to avoid warnings in syslog.
  * Remove incorrect db_subst statement for no-generator template.

  [ Updated translations ]
  * Bosnian (bs.po) by Safir Secerovic
  * Hungarian (hu.po) by SZERVÑC Attila
  * Swedish (sv.po) by Daniel Nylander

 -- Frans Pop <fjp@debian.org>  Sun,  5 Mar 2006 02:22:27 +0100

base-installer (1.47) unstable; urgency=low

  * Use initramfs-tools by default for hppa; yaird as alternative. Change is
    partly because of #353480, partly to get in line with other arches.

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach
  * Swedish (sv.po) by Daniel Nylander

 -- Frans Pop <fjp@debian.org>  Thu, 23 Feb 2006 00:39:49 +0100

base-installer (1.46) unstable; urgency=low

  [ Frans Pop ]
  * Check if initramfs initrd generators are actually available before
    selecting a default.

  [ Colin Watson ]
  * Make apt-cdrom ignore time conflicts while verifying Release signatures
    (for those creating signed CDs).
  * Report error codes from failed hook scripts correctly.

  [ Updated translations ]
  * Greek, Modern (1453-) (el.po) by quad-nrg.net
  * Swedish (sv.po) by Daniel Nylander