@@ -1,0 +1,12 @@
+cpu			: MIPS
+cpu model		: R5000 V1.0
+system type		: SGI Indy
+BogoMIPS		: 179.81
+byteorder		: big endian
+unaligned accesses	: 12
+wait instruction	: yes
+microsecond timers	: yes
+extra interrupt vector	: no
+hardware watchpoint	: no
+VCED exceptions		: not available
+VCEI exceptions		: not available
