@@ -1,0 +1,21 @@
+subarch r5k-ip22
+cpuinfo r5k.cpuinfo
+majors 2.4 2.6
+flavour r5k-ip22
+kernel-2.4 kernel-image-2.4.27-r5k-ip22
+kernel-2.6 linux-image-2.6-r4k-ip22
+usable \
+  kernel-image-2.4.27-r5k-ip22 \
+  linux-image-2.6-r4k-ip22 \
+  linux-image-2.6.12-1-r4k-ip22
+unusable \
+  kernel-image-2.4.27-r4k-ip22 \
+  kernel-image-2.4.27-sb1-swarm-bn \
+  linux-image-2.6-r10k-ip27 \
+  linux-image-2.6-r10k-ip30 \
+  linux-image-2.6-r5k-ip32 \
+  linux-image-2.6-sb1-swarm-bn \
+  linux-image-2.6.12-1-r10k-ip27 \
+  linux-image-2.6.12-1-r10k-ip30 \
+  linux-image-2.6.12-1-r5k-ip32 \
+  linux-image-2.6.12-1-sb1-swarm-bn
