@@ -3,6 +3,9 @@ base-installer (1.50) UNRELEASED; urgency=low
   * Add PPC970MP (actually PPC970*) and POWER5 to the list of powerpc64
     systems (closes: #339283, http://launchpad.net/bugs/35116).
   * Don't consider powerpc64 kernels usable on powerpc.
+  * Update mips for 2.6. There's no r5k-ip22 kernel package any more in 2.6,
+    but apparently the r4k-ip22 kernel works. Add r5k tests based on a
+    cpuinfo from http://lists.debian.org/debian-mips/2001/08/msg00107.html.
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 16 Mar 2006 09:38:49 +0000
 
